--- a/website/tutorials/how_to/set-crosshair-position.mdx
+++ b/website/tutorials/how_to/set-crosshair-position.mdx
@@ -14,7 +14,7 @@ import CodeBlock from "@theme/CodeBlock";
 
 import MinimumVersionWrapper from "../../src/components/MinimumVersionWrapper";
 
-Lightweight Charts™ allows the crosshair position to be set programatically using the [`setCrosshairPosition`](/api/interfaces/IChartApi#setCrosshairPosition), and cleared using [`clearCrosshairPosition`](/api/interfaces/IChartApi#clearCrosshairPosition).
+Lightweight Charts™ allows the crosshair position to be set programatically using the [`setCrosshairPosition`](/docs/api/interfaces/IChartApi#setcrosshairposition), and cleared using [`clearCrosshairPosition`](/docs/api/interfaces/IChartApi#clearcrosshairposition).
 
 Usually the crosshair position is set automatically by the user's actions. However in some cases you may want to set it explicitly. For example if you want to synchronise the crosshairs of two separate charts.
 
@@ -39,7 +39,7 @@ import VersionWarningAdmonition from "@site/src/components/VersionWarningAdmonit
     {syncingCode}
   </CodeBlock>
 
-  ## Automatic tracking mode (on mobile)
+  ## Tracking without long-press (on mobile)
 
   If scrolling and scaling is disabled, then the API can be used to enable a kind of tracking mode without the user having to long-press the screen.
 
