Apply suggestions to A11y tutorial from code review
Co-authored-by: Anastasiia Chuprina <110668595+anachuprina@users.noreply.github.com>

--- a/website/tutorials/a11y/intro.mdx
+++ b/website/tutorials/a11y/intro.mdx
@@ -21,7 +21,7 @@ pagination_next: a11y/keyboard
 ## Introduction
 
 This tutorial introduces how to make charts with Lightweight Charts™ more
-accessible. Lightweight Charts does not have built-in accessibility attributes
+accessible. Lightweight Charts™ does not have built-in accessibility attributes
 and behaviors. This gives you the flexibility to customize and implement them on
 your own, seamlessly integrating the charts into your site's existing
 accessibility policy.
