--- a/website/tutorials/a11y/readability.mdx
+++ b/website/tutorials/a11y/readability.mdx
@@ -25,23 +25,23 @@ diverse user needs.
 
 Certain users with specific visual impairments may struggle to distinguish
 between colors or interpret text and image details in low contrast. For these
-users, a high contrast mode can be immensely helpful.
+users, a high-contrast mode can be immensely helpful.
 
 In our chart application, we leverage the built-in browser feature
 `window.matchMedia()` to ascertain if the user has indicated a preference for
 higher contrast in their system settings.
 
-Here's how we determine if the user prefers a high contrast mode:
+Here's how we determine if the user prefers a high-contrast mode:
 
 ```js
 // Check if user prefers high contrast mode
 function checkHighContrast() {
     // Use window.matchMedia to check 'prefers-contrast' media feature
     const highContrast = window.matchMedia('(prefers-contrast: high)').matches;
-    return highContrast; // returns true if high contrast is enabled, false otherwise
+    return highContrast; // Returns true if high contrast is enabled, false otherwise
 }
 
-// subscribe to changes
+// Subscribe to changes
 const highContrastMediaQuery = window.matchMedia('(prefers-contrast: high)');
 highContrastMediaQuery.addListener(() => {
     setHighContrast(highContrastMediaQuery.matches);
@@ -98,8 +98,7 @@ function setHighContrast(enabled) {
 
 Our `setHighContrast(highContrast)` function updates the chart's colors based on
 the user's preference. If the user prefers high contrast, a higher contrast
-color scheme is applied. If not, the colors switch back to the default, low
-contrast scheme.
+color scheme is applied. If not, the colors switch back to the default, low-contrast scheme.
 
 ### Scalable Font Size
 
@@ -139,5 +138,4 @@ in the chart increases to 16px.
 
 Including these additional accessibility features adheres to the principles of
 creating an inclusive web, where design embraces all user types, abilities, and
-preferences. The final steps involve rigorous accessibility testing prior to
-deployment.
+preferences. Note that you should conduct rigorous accessibility testing before deployment.
