make the a11y tutorial grammatically more consistent

--- a/website/tutorials/a11y/conclusion.mdx
+++ b/website/tutorials/a11y/conclusion.mdx
@@ -23,21 +23,20 @@ creating inclusive web applications.
 
 Among the discussed topics were:
 
-1. **Keyboard Navigation:** The implementation of
+1. **Keyboard navigation:** The implementation of
 keyboard-only navigation on our chart, allowing for interaction exclusively
 through keystrokes.
-2. **ARIA roles and Descriptive Content:** The additions of ARIA
+2. **ARIA roles and descriptive content:** The additions of ARIA
 labels, live regions, and the hiding of non-consequential elements to enhance
 the usefulness of assistive technologies and to communicate context better to
 all users.
-3. **High Contrast and Scalable Font Size:** The detection of the user's
+3. **High contrast and scalable font size:** The detection of the user's
 preference for higher contrast and the inclusion of customizable text sizes for
 better readability.
 
-The tutorial covers these significant points, yet the example provided enriches
-the line chart with more improvements. One such enhancement is an informative
-tooltip that lists available commands, adding another helpful layer of user
-instruction.
+The example provided has even more improvements not directly discussed during the
+the tutorial. One such enhancement is an informative tooltip that lists available
+commands, adding another helpful layer of user instruction.
 
 :::tip
 
@@ -47,18 +46,12 @@ discussed in this tutorial.
 
 :::
 
-Creating accessible web designs results in versatile applications, amenable to a
-diverse array of users with varying abilities and preferences. The methodology
-underpinning this tutorial can find application in many other web development
-contexts, illustrating the universal applicability of good accessibility
-practices.
-
 This tutorial aimed to foster a better understanding of these practices,
 promoting an inclusive web where applications are made with everyone in mind.
 Thank you for following along and continue putting accessibility at the
 forefront of your web development endeavors.
 
-## Complete Example
+## Complete example
 
 You can view the example in a new window, or download the source file below:
 
