--- a/website/tutorials/a11y/intro.mdx
+++ b/website/tutorials/a11y/intro.mdx
@@ -2,7 +2,7 @@
 sidebar_position: 0
 sidebar_label: Introduction
 pagination_title: Introduction
-title: Improving Accessibility
+title: Improving accessibility
 description:
   This tutorial provides an introduction to making a Lightweight Charts™' chart
   more accessible.
@@ -16,7 +16,7 @@ pagination_prev: null
 pagination_next: a11y/keyboard
 ---
 
-# Improving Accessibility
+# Improving accessibility
 
 ## Introduction
 
@@ -96,7 +96,7 @@ To fully benefit from this guide, we assume that you are already familiar with:
 
 - Basic HTML structure and elements.
 - JavaScript fundamentals, especially event handling.
-- The basics of using the Lightweight Charts JS library, including chart
+- The basics of using the Lightweight Charts™ JavaScript library, including chart
   creation and providing data.
 
 :::tip
