--- a/website/tutorials/a11y/readability.mdx
+++ b/website/tutorials/a11y/readability.mdx
@@ -14,14 +14,14 @@ pagination_prev: a11y/screenreader
 pagination_next: a11y/conclusion
 ---
 
-## High Contrast and Scalable Font Size
+## High contrast and scalable font size
 
 Ensuring accessibility in web development means accommodating various user
 preferences and physical abilities. High contrast mode and scalable font size
 are two such distinct features that have been included in our chart, catering to
 diverse user needs.
 
-### High Contrast Mode
+### High contrast mode
 
 Certain users with specific visual impairments may struggle to distinguish
 between colors or interpret text and image details in low contrast. For these
@@ -100,7 +100,7 @@ Our `setHighContrast(highContrast)` function updates the chart's colors based on
 the user's preference. If the user prefers high contrast, a higher contrast
 color scheme is applied. If not, the colors switch back to the default, low-contrast scheme.
 
-### Scalable Font Size
+### Scalable font size
 
 Another key aspect of web accessibility is the option to scale font sizes.
 Users with visual impairments may benefit from larger text sizes, improving
