--- a/website/tutorials/a11y/screenreader.mdx
+++ b/website/tutorials/a11y/screenreader.mdx
@@ -14,7 +14,7 @@ pagination_prev: a11y/keyboard
 pagination_next: a11y/readability
 ---
 
-# Integrating ARIA Roles and Descriptive Content for Enhanced Accessibility
+# Integrating ARIA roles and descriptive content for enhanced accessibility
 
 Accessibility in web development extends beyond just accommodating keyboard-only
 users. Many users with varying abilities make use of assistive technologies like
@@ -102,7 +102,7 @@ meaning, we could use `aria-hidden="true"` to hide it from screen readers:
 </script>
 ```
 
-## Generating a Description of the Chart
+## Generating a description of the chart
 
 In addition to ARIA roles, providing a textual description for our charts helps
 all users, especially those relying on screen readers or other assistive
