added a link to a list of the aria attributes for a11y tutorial

--- a/website/tutorials/a11y/screenreader.mdx
+++ b/website/tutorials/a11y/screenreader.mdx
@@ -28,6 +28,15 @@ In the context of our line chart, we'll be looking at how to implement ARIA
 attributes to further enhance its accessibility in addition to generating
 descriptive content for our graph.
 
+:::info
+
+In this tutorial we will only make use of
+the `aria-live`, `aria-label`, and `aria-hidden` attributes. You can explore
+a [more comprehensive list of attributes on this MDN page]
+(https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Attributes).
+
+:::
+
 ## Use of ARIA attributes in the chart
 
 ### aria-live
