add trademark to usages of Lightweight Charts™

--- a/website/tutorials/demos/custom-font-family.mdx
+++ b/website/tutorials/demos/custom-font-family.mdx
@@ -9,7 +9,7 @@ keywords:
   - typeface
 ---
 
-In this example, Lightweight Charts showcases its high customizability,
+In this example, Lightweight Charts™ showcases its high customizability,
 specifically with respect to adjusting font families. The primary tool for
 implementing this shift in font is the `chart.applyOptions()` method.
 
@@ -20,7 +20,7 @@ responsive alterations to the chart's font style.
 
 The flexibility in adjusting text characteristics enables the fine-tuning of the
 chart's visual elements for better readability or to match specific styles,
-attesting to the adaptability of Lightweight Charts.
+attesting to the adaptability of Lightweight Charts™.
 
 A more detailed tutorial on customizing the appearance of the chart can be found
 [here](../customization/intro.mdx).
