--- a/website/tutorials/demos/custom-locale.mdx
+++ b/website/tutorials/demos/custom-locale.mdx
@@ -12,7 +12,7 @@ keywords:
   - i18n
 ---
 
-In this example, the Lightweight Charts library allows for a change in the
+In this example, the Lightweight Charts™ library allows for a change in the
 locale of the chart rendering, enabling customization to best suit the end-user.
 An initial chart is displayed in the default locale.
 
@@ -26,7 +26,7 @@ A selection of buttons are created, each representing a distinct locale (like
 'es-ES', 'en-US', 'ja-JP'). On clicking any of these buttons, its respective
 locale is applied to the chart by invoking `setLocale(locale)`. This dynamically
 adjusts the date formatting for the chart data, demonstrating the flexibility of
-the Lightweight Charts in catering to an international audience.
+the Lightweight Charts™ in catering to an international audience.
 
 ### API Reference
 
