--- a/website/tutorials/demos/infinite-history.mdx
+++ b/website/tutorials/demos/infinite-history.mdx
@@ -8,7 +8,7 @@ keywords:
   - history
 ---
 
-This sample showcases the capability of Lightweight Charts to manage and display
+This sample showcases the capability of Lightweight Charts™ to manage and display
 an ever-expanding dataset, resembling a live feed that loads older data when the
 user scrolls back in time. The example depicts a chart that initially loads a
 limited amount of data, but later fetches additional data as required.
