--- a/website/tutorials/demos/moving-average.mdx
+++ b/website/tutorials/demos/moving-average.mdx
@@ -10,7 +10,7 @@ keywords:
 ---
 
 This example demonstrates the implementation of a moving average (MA) indicator
-using Lightweight Charts. It effectively shows how to overlay a line series
+using Lightweight Charts™. It effectively shows how to overlay a line series
 representing the moving average on a candlestick series.
 
 Initial rendering involves the creation of a candlestick series using randomly
