--- a/website/tutorials/demos/range-switcher.mdx
+++ b/website/tutorials/demos/range-switcher.mdx
@@ -9,7 +9,7 @@ keywords:
   - resolution
 ---
 
-This example illustrates the creation of a range switcher in Lightweight Charts
+This example illustrates the creation of a range switcher in Lightweight Charts™
 that allows for changing the data set displayed based on a selected time range
 or interval. Different data sets representing ranges such as daily ('1D'),
 weekly ('1W'), monthly ('1M'), and yearly ('1Y') are prepared.
