--- a/website/tutorials/demos/realtime-updates.mdx
+++ b/website/tutorials/demos/realtime-updates.mdx
@@ -9,7 +9,7 @@ keywords:
 ---
 
 This sample demonstrates how to mimic real-time updates on a candlestick chart
-with Lightweight Charts. The chart initially populates with some historical
+with Lightweight Charts™. The chart initially populates with some historical
 data. By using `setInterval` function, the chart then begins to receive
 simulated real-time updates with the usage of `series.update(...)`.
 
