--- a/website/tutorials/demos/whitespace.mdx
+++ b/website/tutorials/demos/whitespace.mdx
@@ -8,7 +8,7 @@ keywords:
   - whitespace data
 ---
 
-This sample demonstrates the usage of "whitespace data" in Lightweight Charts.
+This sample demonstrates the usage of "whitespace data" in Lightweight Charts™.
 Rather than a complete set of pricing information, these data points only
 provide a timestamp. This generates a gap or "whitespace" on the chart,
 signifying periods without trading. An example in the code is `{time: { year:
